frontend_shop/styles/globals.css
html,
body, * {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
    box-sizing: border-box;
}

body{
  background-image:url("../assets/images/background.webp");
  background-size: 100% 100%;
  background-attachment: fixed;
}


::-webkit-scrollbar {
  width: 0px;
}

a {
  color: inherit;
  text-decoration: none;
}

.main-container{
max-width: 1400px; 
margin: auto;
width: 100%;

}

.header-container{
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

@media screen and (max-width:800px){
  .shop-now-message-container{
    background-color: white;
    padding: 1rem;
    border-radius: 1rem;
    box-shadow: 2px 2px 2px black;
  }
}


.navbar-container{
  z-index: 5;
  display: flex;
  justify-content: space-between;
  position: relative;
  padding: 1rem;
}

.marquee-text{
  font-size: 29px;
  font-weight: 600;
  margin: 60px 0px;
  color: #f02d34;
}
.marquee {
  position: relative;
  height: 400px;
  width: 100%;
  overflow-x: hidden;
}

.track {
  position: absolute;
  white-space: nowrap;
  will-change: transform;
  animation: marquee 15s linear infinite;
  width: 180%;
}
.track:hover {
  animation-play-state: paused;
}
@keyframes marquee {
  from { transform: translateX(0); }
  to { transform: translateX(-50%); }
}

 span.text-red {
    -webkit-text-stroke: 1px #f02d34;
    margin-left: 6px;
}

.logo{
  position:fixed;
  top:.5rem;
  left:.5rem;
  transition: transform .4s ease;
}

.logo:hover{
  cursor: pointer;
  transform: scale(1.1,1.1);
}



.cart-icon{
  position: fixed;
  right: 1rem;
  top: 1rem;
  font-size: 25px;
  color: white;
  cursor: pointer;
  transition: transform .4s ease;
  border: none;
  background-color: transparent;
}

.cart-icon:hover{
  transform: scale(1.1,1.1);
}

.cart-item-qty{
  position: absolute;
  right: -8px;
  font-size: 24px;
  color: #eee;
  background-color: #df9e5e;
  width: 38px;
  height: 38px;
  border-radius: 50%;
  text-align: center;
  font-weight: 600;

}
.products-container{
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 15px;
  margin-top: 20px;
  width: 100%;
}
.product-card{
 cursor: pointer;
  transform: scale(1, 1);
  transition: transform 0.5s ease;
 color: #324d67;

}
.product-card:hover{
  transform: scale(1.1,1.1)
}
.product-image{
  border-radius: 15px;
 background-color: #ebebeb;
  transform: scale(1, 1);
  transition: transform 0.5s ease;
}

.product-name{
  font-weight: 500;
}
.product-price{
  font-weight: 800;
  margin-top: 6px;
  color: black;
}

.hero-banner-container{
  padding: 100px 40px;
  background-color: #dcdcdc;
  border-radius: 15px;
  position: relative;
  height: 500px;
  line-height: 0.9; 
  width: 100%;

}
.hero-banner-container .beats-solo{
  font-size: 20px;
}
.hero-banner-container button{
   border-radius: 15px;
  padding: 10px 16px;
  background-color: #f02d34;
  color: white;
  border: none;
  margin-top: 40px;
  font-size: 18px;
  font-weight: 500;
  cursor: pointer;
  z-index:10000 !important;
}

.hero-banner-container h3{
  font-size: 4rem;
  margin-top: 4px;
}
.hero-banner-container h1{
  color: white;
  font-size: 10em;
  margin-left: -20px;
  text-transform: uppercase;
}
.hero-banner-image{
  position: absolute;
  top: 0%;
  right:20%;
  width: 450px;
  height: 450px;
}


.desc{
position: absolute;
right: 10%;
bottom: 5%;
width: 300px;
line-height: 1.3;
display: flex;
flex-direction: column;
 color: #324d67;

}
.desc p{
  color: #5f5f5f;
  font-weight: 100;
text-align: end;
}
.desc h5{
  margin-bottom: 12px;
  font-weight: 700;
  font-size: 16px;
  /* color: black; */
  align-self: flex-end;
}
.products-heading{
  text-align: center;
  margin: 40px 0px;
 color: black;

}
.products-heading h2{
  font-size: 40px;
  font-weight: 800;
}
.products-heading p{
  font-size: 16px;
  font-weight: 200;
}
.footer-banner-container{
  padding: 100px 40px;
  background-color: #f02d34;
  border-radius: 15px;
  position: relative;
  height: 400px;
  line-height: 1; 
  color: white;
  width: 100%;
  margin-top: 120px;
}
.banner-desc{
  display: flex ;
  justify-content: space-between;
}
.banner-desc button{
  border-radius: 15px;
  padding: 10px 16px;
  background-color: white;
  color: red;
  border: none;
  margin-top: 40px;
  font-size: 18px;
  font-weight: 500;
  cursor: pointer;
}
.banner-desc .left h3{
  font-weight: 900;
  font-size: 80px;
  margin-left: 25px;
}
.banner-desc .left p{
  margin:18px;
}
.footer-banner-image{
  position: absolute;
  /* top: -35%;
  left: 8%; */
  top: -25%;
  left: 25%;
}
.banner-desc .right{
  line-height: 1.4;
}
.banner-desc .right h3{
  font-weight: 800;
  font-size: 60px;
}
.banner-desc .right p{
  font-size: 18px;
}
.banner-desc .right .company-desc{
  font-size: 14px;
  font-weight: 300;
}
.cart-wrapper{
  width: 100vw;
  background: rgba(0, 0, 0, 0.5);
  position: fixed;
  right: 0;
  top: 0;
  z-index: 100;
  /* will-change: transform; */
  transition: all 1s ease-in-out;

}
.cart-container{
  height: 100vh;
  width: 650px;
  background-color: white;
  float: right;
  padding: 40px 10px;
  position: relative;
  
}

.footer-container{
  color: black;
  text-align: center;
  margin-top: 20px;
  padding: 30px 10px;
  font-weight: 700;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 10px;
  justify-content: center;

}
.footer-container .icons{
  font-size: 30px;
  display: flex;
  gap: 10px;
}
 .cart-heading{
  display: flex;
  align-items: center;
  font-size: 18px;
  font-weight: 500;
  cursor: pointer;
  gap: 2px;
  margin-left: 10px;
  border: none;
  background-color: transparent;
}

.cart-heading .heading{
  margin-left: 10px;
}
.cart-num-items{
  margin-left: 10px;
  color: #df9e5e;
}
.empty-cart{
  margin:40px;
  text-align:center;
}
.empty-cart h3{
  font-weight: 600;
  font-size: 20px;
}
.cancel{
  cursor: pointer;
}
/* ... */

